@@ -42,8 +42,6 @@ class BR(Country):
     id = "BR"
     languages = ["pt"]
     default_lang = "pt"
-    regions = ["AC", "AL", "AP", "AM", "BA", "CE", "DF", "ES", "GO", "MA", "MT", "MS", "MG", "PA", "PB", "PR", "PE",
-               "PI", "RJ", "RN", "RS", "RO", "RR", "SC", "SP", "SE", "TO"]
     easter_type = EASTER_WESTERN
 
     def __init__(self):
