@@ -31,7 +31,6 @@ from .holidays import Country
 class CA(Country):
     id = "CA"
     languages = ["en", "fr"]
-    regions = ["AB", "BC", "MB", "NB", "NL", "NS", "ON", "PE", "QC", "SK", "NT", "NU", "YT"]
     easter_type = EASTER_WESTERN
 
     def __init__(self):
